# msc_classificator

./: .gitignore  README.md  changelog.md  config.ini.template  ranger.py  requirements.txt  setup.cfg
playground/: calc_cov.py  calc_cov_small.py  check_bson.py  check_config.py  check_loader.py  check_storing.py  compare_pickle_bson.py  config_filepath.py  evaluate_classification.py  gen_elastic.py  gen_mapp.py  harmonize_checks.py  linking_entities.py  load_cov_small.py  modules.py  pickle_zip.py  picklemethis.py  pickler.py  play_datablob_adding.py  play_gen_files.py  play_gen_map240618.py  play_jsonpath.py  play_old_train.py  try_run_old_file.py  zbmath_query.py
playground/run_old_code/: evaluate_classification.py
presentations/: pres240620.txt  pydantic.txt
run/: check_config.py  classify.py  cut_keywords.py  evaluate.py  gen_index.py
run/classic/: classify.py  cut_keywords.py  evaluate.py  gen_index.py  plot_my_stuff.py
run/modern/: check_config.py  create_map_from_disk.py  eval.py  gen_map.py  get_data_elastic.py  prediction.py  prediction2.py  prediction3.py
src/msc_class_original/: classification.py  config.py  generate_index.py
src/zb_msc_classificator/: __init__.py  classification.py  entity_linking.py  evaluation.py  file_generator.py  generate_mapper.py  harmonize.py  tools.py
src/zb_msc_classificator/api/: data_models.py  factory.py  routes.py  run_api.py
tests/: test_config.py  test_ent_link.py  test_generate.py
tests/testfiles/: example_test_set.py  example_text.py  out_small.csv  test_stopwords.txt
(+3 files in other folders)
