[metadata]
name = zb_msc_classificator
description = mapping of keywords to msc categories
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Marcel Fuhrmann

[options]
setup_requires = setuptools-scm
install_requires =
  nltk ~= 3.5
  scipy ~= 1.6.0
  numpy ~= 1.19.5
  pandas ~= 1.1.5
  matplotlib ~= 3.3.4
  pydantic ~= 1.7.4
  sparqlwrapper ~= 1.8.5
  fastapi ~= 0.63.0
  uvicorn ~= 0.13.3
  unidecode ~= 1.2.0
package_dir =
  = src
packages = find:
include_package_data = true

[options.packages.find]
where = src